--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "eduapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "exe" : "node index.ts"
   },
   "keywords": [],
   "author": "",
